big applause added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <title>Meow Board</title>
 </head>
 <body>
+    <audio id="applause-big" src="sounds/applause-big.mp3"></audio>
     <audio id="applause" src="sounds/applause.mp3"></audio>
     <audio id="boo" src="sounds/boo.mp3"></audio>
     <audio id="gasp" src="sounds/gasp.mp3"></audio>
